--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.7.13"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
