--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "Apply-SAML-Credentials-To-AWS-Config",
   "version": "0.1",
   "description": "Gets AWS credentials from samlresponse and saves them to a local config file.",
-  "main": "index.js",
+  "main": "lib",
+  "types": "lib",
   "author": "Austin Mayer",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/node": "^18.7.13"
   },
