--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Austin Mayer",
   "license": "MIT",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tronicboy1/apply-saml-creds"
+  },
   "scripts": {
     "build": "tsc",
     "apply": "node lib/index.js"
