--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gets AWS credentials from samlresponse and saves them to a local config file.",
   "main": "lib",
   "types": "lib",
-  "bin": "lib/index.js",
+  "bin": "./lib/index.js",
   "author": "Austin Mayer",
   "license": "MIT",
   "private": false,
